erDiagram
    USERS ||--o{ HEALTH_RECORDS : "logs"
    USERS ||--o{ CHAT_HISTORY : "sends"
    USERS ||--o{ MEDICAL_REPORTS : "uploads"
    USERS ||--o{ ENVIRONMENTAL_ALERTS : "receives"
    USERS ||--o{ HEALTH_CONDITIONS : "has"
    USERS ||--|| USER_PREFERENCES : "configures"
    USERS ||--o{ AUTH_SESSIONS : "authenticates"
    USERS ||--o| ABDM_INTEGRATIONS : "links"
    USERS ||--o{ SUBSCRIPTIONS : "subscribes"
    USERS ||--o{ USER_ANALYTICS : "generates"
    USERS ||--o{ API_USAGE : "consumes"
    USERS ||--o{ USER_FEEDBACK : "submits"
    USERS ||--o| CORPORATE_EMP_MAP : "belongs"
    CORPORATE_ACCOUNTS ||--o{ CORPORATE_EMP_MAP : "employs"
    USERS ||--o{ DAILY_STEPS : "tracks"
    USERS ||--o{ WORKOUTS : "tracks"
    USERS ||--o{ REMINDERS : "schedules"
